Fix z-index for dropdown

--- a/components/src/components/dropdown/dropdown.scss
+++ b/components/src/components/dropdown/dropdown.scss
@@ -12,6 +12,11 @@
   box-sizing: border-box;
 }
 
+:host{
+  position: relative;
+  z-index: 10000;
+}
+
 #{$prefix}-dropdown{
   position: relative;
   display: flex;
